# AndroidLua

./: .gitignore  README.md  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: import.lua  now_login.lua  test.lua  test2.lua
app/src/main/java/sk/kottman/androlua/: Main.java  MainActivity.java  StringUtils.java
app/src/main/java/sk/kottman/androlua/utils/: RootPermission.java
app/src/main/jni/android/: androidlib.c  androidlib.h  input_event.c  input_event.h  shell_cmd.c  shell_cmd.h
app/src/main/jni/lua/: linit.c  lualib.h
app/src/main/jni/luajava/: luajava.c  luajava.h
gradle/wrapper/: gradle-wrapper.properties
lua5.1java/: CMakeLists.txt  build.gradle
lua5.1java/src/androidTest/java/hook/key/automatic/com/lua51java/: ExampleInstrumentedTest.java
lua5.1java/src/main/: AndroidManifest.xml
lua5.1java/src/main/java/luajava/: JavaFunction.java
lua5.1java/src/main/jni/android/: androidlib.c  androidlib.h  event_test.h  input_event.c  input_event.h  shell_cmd.c
lua5.1java/src/main/jni/lua/: loslib.c  lualib.h
lua5.1java/src/main/jni/luajava/: luajava.h
lua5.1java/src/main/res/values/: strings.xml
lua5.1java/src/test/java/hook/key/automatic/com/lua51java/: ExampleUnitTest.java
lua5.3java/: CMakeLists.txt  build.gradle
lua5.3java/src/main/java/org/keplerproject/luajava/: LuaState.java
lua5.3java/src/main/jni/android/: androidlib.c  event_test.c
lua5.3java/src/main/jni/lua/: linit.c  lualib.h
lua5.3java/src/main/jni/luajava/: luajava.c  luajava.h
